# DATABASE-SYSTEM-FINAL-PROJECT

./: sdp2024.postman_collection.json
SDP2024/: pyproject.toml
SDP2024/backend/: app.py  sql_queries.py
SDP2024/frontend/: api-service.js  index.html  scripts.js  styles.css
