[tool.poetry]
name = "sdp2024"
version = "0.1.0"
description = ""
authors = ["MOUNIKA SAI YAGANTI <yagantim1@montclai.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
